compiler/tests/fail/param_expansion/x86-64/expression_res.jazz
param int N = (int)(64u) 3;

inline fn f () -> reg u64[N] {
  reg u64[N] a;
  return a;
}
